--- a/CentipedeGame/app/src/main/AndroidManifest.xml
+++ b/CentipedeGame/app/src/main/AndroidManifest.xml
@@ -17,9 +17,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="sXzAln2nF9zEJMgHE4dpSw4vfRlIYyKBNqSfGRnj" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="rMhW5zVkArd56453BZND1qbZY92JRS7EoywOQiaW" />
         <activity
             android:name=".MainMenuActivity"
-            android:label="@string/app_name" >
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,12 +40,21 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" >
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".GameResultsActivity"
-            android:label="@string/title_activity_game_results" >
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_game_results"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".GamePlayActivity"
+            android:label="@string/title_activity_game_play"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait">
         </activity>
     </application>
-
 </manifest>
